--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "emoji-mart": "^3.0.1",
     "firebase": "^8.5.0",
     "framer-motion": "^4.1.11",
     "lodash": "^4.17.21",
